# AI_Assistant

./: .gitignore  pyproject.toml
src/: assistant.py  chart.py  exam.py  sol-ipywidgets.py  sol.py  task.py
static/: styles.css
